# ProximalPolicyOptimization

./: .gitignore  example.py  example_cnn.py  example_cnn_extra_info.py  pg.ipynb  pyproject.toml  setup.py  test.py  umlrefactor.drawio
PPO/: PPOAgent.py  PPOAgentExtraInfo.py  PPOAgentI.py  __init__.py  layers.py  utils.py
PPO/actors/: ConvSoftmaxActor.py  SoftmaxActor.py  SoftmaxActorI.py  __init__.py  filters.py
PPO/buffers/: Buffer.py  BufferCat.py  BufferI.py  __init__.py
PPO/callbacks/: AnnealEntropyCallback.py  CallbacksI.py  TensorBoardCallback.py  __init__.py
PPO/critics/: ConvCritic.py  Critic.py  CriticI.py  __init__.py
PPO/lr_schedulers/: DefaultLrAnneal.py  LRSchedulerI.py  __init__.py
